Updated to add password change and forgotten password functions

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -15,6 +15,16 @@ user.active_account.activation_failed=Account activation failed
 
 user.reset_password.successfully=Reset password successfully
 
+user.generate-otp.successfully=OTP code sent successfully
+user.generate-otp.failed=OTP code sent failed
+
+user.check-otp.successfully=OTP authentication successful
+user.check-otp.failed=OTP authentication failed
+
+user.change-password.successfully=Password changed successfully
+user.change-password.failed=Password change failed
+
+
 invalid_error=Invalid error:
 
 insert.insert_successfully=Insert Successfully
