update forgot password

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -24,6 +24,9 @@ user.check-otp.failed=OTP authentication failed
 user.change-password.successfully=Password changed successfully
 user.change-password.failed=Password change failed
 
+user.delete-otp.successfully=Deleted OTP code successfully
+user.delete-otp.failed=Delete OTP code failed
+
 
 invalid_error=Invalid error:
 
