--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -21,6 +21,9 @@ user.generate-otp.failed=Gửi mã OTP thất bại
 user.check-otp.successfully=Xác thực OTP thành công
 user.check-otp.failed=Xác thực OTP thất bại
 
+user.delete-otp.successfully=Xóa mã OTP thành công
+user.delete-otp.failed=Xóa mã OTP thất bại
+
 user.change-password.successfully=Thay đổi mật khẩu thành công
 user.change-password.failed=Thay đổi mật khẩu thất bại
 
